fix archive.is layout issues for posts

--- a/src/sass/post.sass
+++ b/src/sass/post.sass
@@ -19,3 +19,6 @@
   color: #808080
   font-size: 12px
   margin: 5px 0 10px
+
+.clearBoth
+  clear: both
