--- a/src/sass/thread.sass
+++ b/src/sass/thread.sass
@@ -38,6 +38,8 @@
     height: 50px
   .thread-score-box
     margin: 0 7px
+    //float for archive.is compatibility
+    float: left
     width: 43px
 
   .vote 
